--- a/app/src/main/res/layout/fragment_in_progress.xml
+++ b/app/src/main/res/layout/fragment_in_progress.xml
@@ -8,7 +8,7 @@
     tools:context=".Fragments.InProgress">
 
     <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
-            android:id="@+id/layoutOrder"
+            android:id="@+id/layoutInProgress"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
@@ -18,7 +18,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvItems"
+                android:id="@+id/rvItemsInProgress"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/activity_back" />
