--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,13 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navView"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/myColorSecond"
+        android:background="@color/white"
         app:headerLayout="@layout/header"
         app:itemTextAppearance="?android:attr/textAppearanceMedium"
-        app:itemTextColor="@android:color/white"
+        app:itemTextColor="@android:color/black"
         app:menu="@menu/orders" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -156,6 +156,38 @@
             app:stl_underlineColor="@color/myColor"
             app:stl_underlineThickness="1dp" />
 
+        <RelativeLayout
+            android:id="@+id/layoutTotal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/myColor"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/viewpagertab">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3.5"
+                    android:fontFamily="@font/montserra_regular_bold"
+                    android:text="Total"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvTotalPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_weight="0.5"
+                    android:fontFamily="@font/montserra_regular_bold"
+                    android:text="0.0"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+        </RelativeLayout>
+
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
@@ -163,7 +195,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewpagertab" />
+            app:layout_constraintTop_toBottomOf="@+id/layoutTotal" />
 
         <ImageButton
             android:id="@+id/ibChat"
