--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="@color/profilePrimaryDark"
+            app:contentScrim="@color/myColor"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
             app:scrimAnimationDuration="0">
 
@@ -41,7 +41,7 @@
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/user" />
+                    android:src="@drawable/account_circle" />
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
