--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/myColorSecond"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -60,7 +60,7 @@
                 android:text="User name"
                 android:textSize="16sp"
                 android:fontFamily="@font/poppins_medium"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/black"/>
 
         </LinearLayout>
 
@@ -69,6 +69,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/white"/>
+        android:background="@color/black"/>
 
 </LinearLayout>
