--- a/app/src/main/res/layout/layout_confirm_rider.xml
+++ b/app/src/main/res/layout/layout_confirm_rider.xml
@@ -58,8 +58,8 @@
                 android:id="@+id/btnConfirmRider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/myColor"
-                android:text="Confirm Rider"
+                android:backgroundTint="@color/myColor"
+                android:text="Confirm Pickup"
                 android:elevation="15dp"
                 android:textColor="@android:color/white"/>
 
