--- a/app/src/main/res/layout/layout_driver_info.xml
+++ b/app/src/main/res/layout/layout_driver_info.xml
@@ -99,7 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:text="Uzair Ahmed"
+                    android:text="Driver Name"
                     android:fontFamily="@font/uber_move_bold"
                     android:textColor="#737373"
                     android:textSize="14sp"/>
