--- a/app/src/main/res/drawable/kitchen_marker_background.xml
+++ b/app/src/main/res/drawable/kitchen_marker_background.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke android:color="@color/black" android:width="2dp"/>
+    <solid android:color="@color/black"/>
 
 </shape>
