--- a/app/src/main/res/layout/destination_info_window.xml
+++ b/app/src/main/res/layout/destination_info_window.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="250dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
         android:orientation="horizontal">
@@ -15,26 +15,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
-            android:weightSum="6"
+            android:minHeight="50dp"
+            android:weightSum="2"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@android:color/black"
+                android:layout_height="match_parent"
+                android:background="@color/myColor"
                 android:padding="4dp"
                 android:orientation="vertical"
-                android:layout_weight="1.5">
+                android:layout_weight="0.5">
 
                 <TextView
                     android:id="@+id/tvDistance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:text="5\nkm"
-                    android:fontFamily="@font/uber_move"
-                    android:textSize="13sp"
+                    android:fontFamily="@font/montserra_regular"
+                    android:textSize="14sp"
                     android:layout_gravity="center"
-                    android:textAlignment="center"
+                    android:gravity="center_vertical|center_horizontal"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"/>
 
@@ -44,16 +45,13 @@
                 android:id="@+id/tvDestination"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="4.5"
-                android:text="CentralPark CentralPark Central"
+                android:layout_weight="1.5"
+                android:fontFamily="@font/montserra_regular"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:text="CentralPark Central"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"/>
-
-            <ImageView
-                android:id="@+id/ivNext"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/next"/>
+                android:layout_marginStart="10dp"/>
 
         </LinearLayout>
 
@@ -66,15 +64,17 @@
 
         <View
             android:layout_width="1dp"
-            android:layout_height="10dp"
+            android:layout_height="11dp"
             android:layout_gravity="center_horizontal"
-            android:background="@android:color/black"/>
+            android:background="@color/myColor"/>
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/destination" />
+            android:src="@drawable/account_circle"
+            app:tint="@color/myColor"
+            android:tint="@color/myColor"/>
 
     </FrameLayout>
 
