--- a/app/src/main/res/layout/activity_verified.xml
+++ b/app/src/main/res/layout/activity_verified.xml
@@ -48,7 +48,7 @@
         android:layout_width="160dp"
         android:layout_height="300dp"
         android:layout_marginTop="25dp"
-        android:src="@drawable/phone_icon"
+        android:src="@drawable/phone_icon_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
