--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="red">#ff0000</color>
     <color name="myColor">#ff9933</color>
     <color name="myColorSecond">#FFDCB8</color>
+    <color name="myColorThird">#273D54</color>
     <color name="Green">#00804D</color>
 
 
