--- a/app/src/main/res/menu/orders.xml
+++ b/app/src/main/res/menu/orders.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/YourItems"
+        android:id="@+id/yourItems"
         android:title="Your Items" />
+
+    <item
+        android:id="@+id/wallet"
+        android:title="Wallet" />
 
 </menu>
